# XBridge

XBridge.Server/.github/workflows/: ci.yml
XBridge.Server/docs/: acceptance_tests.md  api_spec.md  deployment.md
XBridge.Server/proto/: xbridge.proto
XBridge.Server/src/XBridge.Host/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  README.md  xbridge_config.json
XBridge.Server/src/XBridge.Host/ViewModels/: DeviceDetailViewModel.cs  DeviceListViewModel.cs
XBridge.Server/src/XBridge.Host/XBridge.Core/: OptimizeManager.cs  SessionManager.cs
XBridge.Server/src/XBridge.Host/XBridge.Core/Models/: DeviceSession.cs  OptimizeDto.cs
XBridge.Server/src/XBridge.Host/XBridge.Core/Utils/: CryptoUtils.cs
XBridge.Server/src/XBridge.Host/XBridge.Service/: Program.cs  Startup.cs
XBridge.Server/src/XBridge.Host/XBridge.Service/Networking/: GrpcHost.cs  TcpJsonHost.cs
XBridge.Server/src/XBridge.Host/XBridge.Service/Persistence/: OptimizeStore.cs
XBridge.Server/src/XBridge.Host/XBridge.Service/Services/: HealthService.cs  OptimizeService.cs
XBridge.Server/src/XBridge.Host/XBridge.Tests/: IntegrationTests.cs  OptimizeManagerTests.cs
XBridge.shared/: CMakeLists.txt  xbridge_config.json
XBridge.shared/examples/: host_loader.c
XBridge.shared/include/: xbridge_plugin.h
XBridge.shared/src/: logger.cpp  plugin.cpp
XBridge.shared/ue_module/: MyXBridgeModule.cpp  MyXBridgeModule.h
